--- a/components/global-audio/styles.module.css
+++ b/components/global-audio/styles.module.css
@@ -1,4 +1,6 @@
 .parent {
+  --background: white;
+  --foreground: black;
   position: fixed;
   top: var(--page-margin);
   left: var(--page-margin);
@@ -8,10 +10,10 @@
   );
   height: var(--navigation-height);
   max-width: 800px;
-  background: black;
+  background: var(--background);
   border-radius: var(--border-radius-content);
   padding: 0 0.5em 0 0;
-  color: white;
+  color: var(--foreground);
   display: flex;
   align-items: center;
   gap: 0.5em;
@@ -32,12 +34,8 @@
   flex: 1 1 auto;
   width: 100%;
   height: 100%;
-  --player-background: black;
-  --player-color: white;
-}
-
-.parent audio::-webkit-media-controls-panel {
-  background: black;
+  background-color: var(--background);
+  color: var(--foreground);
 }
 
 .info {
