tweak: make showcase piece play button white

--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -75,12 +75,12 @@
 }
 
 .playButton {
-  background: black;
+  background: white;
+  color: black;
   width: 80px;
   height: 80px;
   border-radius: 40px;
   cursor: pointer;
-  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
