feat: global audio player for showcase pieces (#159)
* feat: global audio player for showcase pieces

* tweaked a lot of CSS to fiddle global player in
* integrated custom audio player UI to overcome styling issues of audio tags across different browsers (Chrome looked okay, but Safari and Firefox looked shit)
* changed Drei's audio handling to use a single global listener
* which allows me to mute all world sounds on project pages

* fix: add missing space between compass and menu

* tweak: reduce code duplication to fix inconsistent spacing

* tweak: make global audio player white

* tweak: make showcase piece play button white

* tweak: use slightly transparent white for player elements

---------

Co-authored-by: Bent Hillerkus <bent@bent.party>

--- a/components/navigation/menu.module.css
+++ b/components/navigation/menu.module.css
@@ -1,13 +1,13 @@
 .header {
   position: fixed;
-  top: 10px;
-  right: 10px;
+  top: var(--page-margin);
+  right: var(--page-margin);
   z-index: 1000;
 }
 
 .menu {
-  width: 3rem;
-  height: 3rem;
+  width: var(--navigation-height);
+  height: var(--navigation-height);
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.8);
   display: flex;
@@ -27,8 +27,8 @@
 
 .navMenu {
   position: fixed;
-  top: 4.25rem;
-  right: 10px;
+  top: calc(var(--page-margin) + var(--navigation-height) + var(--navigation-page-gap));
+  right: var(--page-margin);
   background-color: rgba(255, 255, 255, 1);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
