--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -74,6 +74,35 @@
   }
 }
 
+.playButton {
+  background-color: var(--interactive-color);
+  color: black;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 200ms 1s ease-out, scale 100ms ease-out, var(--interactive-transition);
+  opacity: 0;
+  scale: 1;
+}
+
+.playButton:hover {
+  background-color: var(--interactive-color-hover);
+}
+
+.audio:hover .playButton,
+.playButtonPaused {
+  transition: opacity 200ms ease-out, scale 100ms ease-out, var(--interactive-transition);
+  opacity: 1;
+}
+
+.playButton:hover {
+  scale: 1.1;
+}
+
 .websiteContainer {
   position: relative;
   width: 100%;
