--- a/components/projectPage/projectPage.module.css
+++ b/components/projectPage/projectPage.module.css
@@ -4,28 +4,17 @@
   justify-content: flex-start;
   height: 100vh;
   width: 100vw;
-  padding: 10px;
+  padding: var(--page-margin);
   margin: auto;
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(4px);
-  overflow: hidden;
-}
-
-.navigationButtons {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  position: sticky;
-  top: 0.5rem;
-  width: 100%;
-  padding: 0 3rem 1.25rem 0;
+  gap: var(--navigation-page-gap);
 }
 
 .article {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 0.5rem;
   overflow: hidden;
   border-radius: var(--border-radius-container);
 }
