--- a/components/list/projectList.module.css
+++ b/components/list/projectList.module.css
@@ -131,3 +131,17 @@
   opacity: 0.8;
 }
 
+
+.listFooter {
+  position: relative; /* Damit es im Flow bleibt */
+  width: 100%;
+  text-align: center;
+  padding: 1rem;
+  z-index: 0; /* Bleibt hinter dem Hintergrundbild */
+  margin-top: auto; /* Stellt sicher, dass es am unteren Ende bleibt */
+}
+
+.listFooter p {
+  margin: 0;
+  font-size: 0.9rem;
+}
